external-crates/move/move-compiler/transactional-tests/tests/evaluation_order/lazy_assert.exp
processed 3 tasks

task 1 'run'. lines 9-15:
Error: Script execution failed with VMError: {
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
}

task 2 'run'. lines 17-23:
warning[W00001]: DEPRECATED. will be removed
   ┌─ /var/folders/cs/nnvzvy2j4v533r7tpprt7gt00000gn/T/.tmpaean3c:21:9
   │
21 │         assert(true, 1 / 0);
   │         ^^^^^^
   │         │
   │         'assert' function syntax has been deprecated and will be removed
   │         Replace with 'assert!'. 'assert' has been replaced with a 'assert!' built-in macro so that arguments are no longer eagerly evaluated


